Project

General

Profile

Actions

Bug #43892

closed

mon/PaxosService.cc: 188: FAILED ceph_assert(have_pending) during n->o upgrade

Added by Sage Weil over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

   -20> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'auth_client_required'
   -19> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'auth_cluster_required'
   -18> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'auth_service_required'
   -17> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'auth_service_ticket_ttl'
   -16> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'device_failure_prediction_mode'
   -15> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'mon_allow_pool_delete'
   -14> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'ms_bind_msgr1'
   -13> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'ms_bind_msgr2'
   -12> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'ms_client_mode'
   -11> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'ms_cluster_mode'
   -10> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'ms_die_on_bug'
    -9> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'ms_service_mode'
    -8> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'osd_crush_update_weight_set'
    -7> 2020-01-29T17:09:57.897-0600 7f990509d700 -1 mon.cpach@1(peon).config load_config adding global/ prefix to key 'osd_recovery_sleep'
    -6> 2020-01-29T17:09:57.897-0600 7f990509d700  4 set_mon_vals no callback set
    -5> 2020-01-29T17:09:57.897-0600 7f990509d700  4 mgrc handle_mgr_map Got map version 235576
    -4> 2020-01-29T17:09:57.897-0600 7f990509d700  4 mgrc handle_mgr_map Active mgr is now v1:10.3.64.21:6873/4068933
    -3> 2020-01-29T17:09:57.901-0600 7f990509d700  5 mon.cpach@1(peon).monmap v8 apply_mon_features wait for service to be writeable
    -2> 2020-01-29T17:09:57.901-0600 7f990509d700  5 mon.cpach@1(peon).paxos(paxos active c 86315638..86316259) is_readable = 1 - now=2020-01-29T17:09:57.904282-0600 lease_expire=2020-01-29T17:10:02.891755-0600 has v0 lc 86316259
    -1> 2020-01-29T17:09:58.141-0600 7f99078a2700 -1 /build/ceph-15.0.0-10065-g48526b9/src/mon/PaxosService.cc: In function 'void PaxosService::propose_pending()' thread 7f99078a2700 time 2020-01-29T17:09:58.141143-0600
/build/ceph-15.0.0-10065-g48526b9/src/mon/PaxosService.cc: 188: FAILED ceph_assert(have_pending)

 ceph version 15.0.0-10065-g48526b9 (48526b90c7ea6a583ec014235d8ca7bd274747e7) octopus (rc)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x152) [0x7f991209db78]
 2: (ceph::__ceph_assertf_fail(char const*, char const*, int, char const*, char const*, ...)+0) [0x7f991209dd53]
 3: (PaxosService::propose_pending()+0x47f) [0x560c50dd71bf]
 4: (ConfigMonitor::tick()+0x88) [0x560c50d4a4e8]
 5: (Monitor::tick()+0xa0) [0x560c50ccb210]
 6: (Context::complete(int)+0x9) [0x560c50ce3fe9]
 7: (SafeTimer::timer_thread()+0x1ac) [0x7f991213dcac]
 8: (SafeTimerThread::entry()+0xd) [0x7f991213f07d]
 9: (()+0x76db) [0x7f9910f076db]
 10: (clone()+0x3f) [0x7f99100ed88f]

Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #43916: nautilus: mon/PaxosService.cc: 188: FAILED ceph_assert(have_pending) during n->o upgradeResolvedShyukri ShyukrievActions
Actions #1

Updated by Sage Weil over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Backport set to nautilus
  • Pull request ID set to 32975
Actions #2

Updated by Sage Weil over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43916: nautilus: mon/PaxosService.cc: 188: FAILED ceph_assert(have_pending) during n->o upgrade added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF