mon/ConfigMonitor: only propose if leader

Introduced by 08fcf01c040e0caaf5b418d300f774bf8c3033da, which activated
this (broken) code path.

Fixes: https://tracker.ceph.com/issues/43892
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit ab64a220ccf78d632114f7041e6344aaccf6b359)